re-ordered z-indexes (indices?) to fix overlapping components, removed the bit that made select lists jump to 10k/100k z-index when visible

--- a/services/core-web/src/styles/components/NavBar.scss
+++ b/services/core-web/src/styles/components/NavBar.scss
@@ -2,7 +2,7 @@
 .menu {
   @include flex;
   position: fixed;
-  z-index: 1000;
+  z-index: 1200;
   width: 100%;
   justify-content: space-between;
   background-color: $nav-color;
@@ -61,7 +61,7 @@
   background-color: $nav-border-color;
   position: fixed;
   top: 53px;
-  z-index: 998;
+  z-index: 1110;
   width: 100%;
   height: 8px;
 }
