--- a/services/core-web/src/styles/components/NoticeOfWork.scss
+++ b/services/core-web/src/styles/components/NoticeOfWork.scss
@@ -92,7 +92,7 @@
       position: fixed;
       width: 100vw;
       background-color: $pure-white;
-      z-index: 50;
+      z-index: 1100;
       box-shadow: $default-box-shadow;
     }
     &--content {
