--- a/services/core-web/src/styles/settings/themeOverride.scss
+++ b/services/core-web/src/styles/settings/themeOverride.scss
@@ -277,7 +277,7 @@
 // TOAST
 .ant-notification-notice,
 .ant-notification {
-  z-index: 1000 !important;
+  z-index: 1500 !important;
 }
 
 .ant-notification-notice-message {
